# Rider3D

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build-mac.sh  build-windows.sh
1st-plan/: 1.Structure.md
1st-plan/1-Structure/: index.md
1st-plan/10-Animation/: index.md
1st-plan/11-Net/: index.md
1st-plan/12-Script/: index.md
1st-plan/2-Render/: index.md
1st-plan/4-Model/: index.md
1st-plan/5-SceneManager/: index.md
1st-plan/6-Input/: index.md
1st-plan/7-Sound/: index.md
1st-plan/8-Collision/: index.md
1st-plan/9-Particle/: index.md
3dparty/json-cpp/json/: value.h  writer.h
3dparty/logger/: log.h  log_capture.cc  log_capture.h  log_kv.cc  log_kv.h  logger.cc  logger.h  macro_util.h
platform/Android/: settings.gradle
platform/Android/demo/: CMakeLists.txt  build.gradle
platform/Android/rider3d/: build.gradle
platform/Android/unknown-3d/: .gitignore  CMakeLists.txt  build.gradle
platform/Android/unknown-3d/src/androidTest/java/com/unknown/: ExampleInstrumentedTest.java
platform/Android/unknown-3d/src/main/java/com/unknown/: Unknown2D.java  Unknown2DEngine.java  Unknown3D.java  Unknown3DEngine.java  UnknownEngine.java
platform/Android/unknown-3d/src/main/java/com/unknown/activity/: Unknown3DActivity.java  Unknown3DGLActivity.java  UnknownSurfaceActivity.java
platform/Android/unknown-3d/src/main/java/com/unknown/component/: Camera.java  Component.java  ComponentType.java  DebugInfo.java  Transform.java  Vertex.java  Vertices.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/: NativeObject.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/audio/: AudioManager.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/entity/: Entity.java  EntityManager.java  PrimitiveType.java  PropertyType.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/event/: EventManager.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/file/: FileManager.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/input/: InputManager.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/net/: Http.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/scene/: Scene.java  SceneManager.java
platform/Android/unknown-3d/src/main/java/com/unknown/core/supposition/: Color.java  NdcPoint.java  Object3D.java  RenderType.java  UV.java  Vec3.java  Vertex.java  Vertices.java
platform/Android/unknown-3d/src/main/java/com/unknown/object/: Color.java  NativeObject.java  NdcPoint.java  Object3D.java  RenderType.java  UV.java  Vertex.java  Vertices.java
platform/Android/unknown-3d/src/main/java/com/unknown/render/: RenderConfig.java  SurfaceRenderLooper.java
platform/Android/unknown-3d/src/main/java/com/unknown/util/: VertexUtil.java
platform/Android/unknown-3d/src/main/java/com/unknown/view/: Unknown3DGLSurfaceView.java  Unknown3DSurfaceView.java  UnknownSurfaceView.java
platform/Android/unknown-3d/src/main/java/dalvik/annotation/optimization/: CriticalNative.java  FastNative.java
platform/Android/unknown-3d/src/test/java/com/unknown/: ExampleUnitTest.java
platform/Linux/demo/: main.cpp
platform/MacOS/demo/: main.cpp  main.mm
platform/Web/: index.html
platform/Web/js/: RiderEngine.js
platform/Web/wasm/: build_wasm.sh  rider3d.js  rider3d.wasm
platform/Windows/demo/: main.cpp
platform/iOS/: .gitignore  Podfile  Rider3D.podspec  build-rider3d-static.sh  build-unknown3d-static.sh
platform/iOS/Rider3DWorkspace.xcworkspace/: contents.xcworkspacedata
platform/iOS/Unknown3DWorkspace.xcworkspace/: contents.xcworkspacedata
shaders/: compile-shaders-mac.sh  compile-shaders-windows.sh  shaderc-usage.txt
shaders/common/: fs_common.sc  varying.def.sc  vs_common.sc
shaders/include/: bgfx_compute.sh
shaders/simple/: vs_simple.sc
src/: RiderEngine.cpp  RiderEngine.h  UnknownEngine.cpp  UnknownEngine.h
src/component/: BasicComponents.cpp  BasicComponents.h
src/core/: Scene.cpp  Scene.h  Supposition.cpp  Supposition.h  Texture.cpp  Texture.h  Vertex.h
src/core/audio/: Audio.h
src/core/bgfx/: BgfxTexture.cpp  BgfxTexture.h  BufferHandle.cpp  BufferHandle.h
src/core/event/: SceneUpdateEvent.h
src/core/file/: File.cpp  File.h
src/core/input/: Input.cpp  Input.h
src/core/net/: Http.cpp  Http.h  Socket.cpp  Socket.h
src/core/render/: CanvasRenderer.cpp  CanvasRenderer.h  EntityRenderer.cpp  EntityRenderer.h  Graph2DRenderer.cpp  Graph2DRenderer.h  Graph3DRenderer.cpp  Graph3DRenderer.h  SceneRenderer.cpp  SceneRenderer.h  TestRenderer.cpp  TestRenderer.h
src/core/shader/: Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/core/system/: BasicRenderSystem.cpp  BasicRenderSystem.h  MoveSystem.cpp  MoveSystem.h
src/entityx/: Entity.cc  Entity.h  Event.cc  Event.h  System.cc  System.h  config.h  quick.h
src/entityx/help/: NonCopyable.h  Pool.cc  Pool.h  Timer.cc  Timer.h
src/entityx/tags/: TagsComponent.h
src/entityx/test/: catch.hpp  simplesignal.h
src/platform/android/: ACamera.hpp  AColor.cpp  AColor.hpp  AComponents.hpp  AEntity.hpp  ANdcPoint.cpp  AObject3D.cpp  APoint.hpp  ARiderEngine.hpp  AScene.cpp  AScene.hpp  ASuppositions.hpp  ATransform.hpp  AUV.cpp  AUV.hpp  AUnknown3DEngine.cpp  AUnknownEngine.cpp  AUnknownEngine.hpp  AVertex.cpp  AVertex.hpp  AVertices.cpp  JNativeConverter.cpp  JNativeConverter.h  JObjectHolder.h  JRefHolder.h  JniEntry.cpp
src/platform/web/: WNativeConverter.cpp  WNativeConverter.h  WRiderEngine.cpp
src/unknown/: Unknown2DEngine.cpp  Unknown2DEngine.h  Unknown3DEngine.cpp  Unknown3DEngine.h  UnknownEngine.cpp  UnknownEngine.h
src/unknown/component/: BasicComponents.h
src/unknown/core/: Object3D.cpp  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Vertex.h
src/unknown/data/: Object.cpp  Object.h  Object3D.cpp  Object3D.h  Supposition.h  Vertex.cpp  Vertex.h
src/unknown/entityx/: Entity.h  Event.h  System.h  config.h
src/unknown/event/: SceneUpdateEvent.h
src/util/: Define.h  LogUtil.h  PointUtil.cpp  PointUtil.h  TimeUtil.cpp  TimeUtil.h  VertexUtil.cpp  VertexUtil.h
(+153 files in other folders)
